# yamaro

./: .gitignore  LICENSE  README.md  drone.yaml  example.urdf  example.yaml  example2.yaml  example3.yaml  example4.yaml  example5.yaml  flexidict.py  pretty_print_dict.py  process_value.py  pyproect.toml  pyproject.toml  recursion_test.py  robot_functions.yaml  robot_parts.yaml  setup.cfg  setup.py  testing.yaml  yamaro.py
src/yamaro/: flexidict.py  output.urdf  pretty_print_dict.py  process_value.py  yamaro.py
src/yamaro_yonitakahashi/: __init__.py  flexidict.py  output.urdf  process_value.py  yamaro.py
src/yamaro_yonitakahashi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: drone.yaml  example5.yaml  robot.yaml  test.py  test1.py  testing.yaml  transformation.py  ultimate_robot.yaml
