# setup.cfg

[metadata]
name = yamaro
version = 0.0.1
author = Yoni Takahashi
author_email = takahashiyoni@gmail.com
description = YAML to URDF converter that replaces xacro for ROS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JOHNI1/yamaro
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    numpy
    pyyaml

[options.packages.find]
where = src
